<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dateTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/mm_dd_yyyy"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/hoursWorkedLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hours_worked"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hoursWorkedTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_2"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/totalSalesLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_sales"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/totalSalesTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_2"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tipPercentLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tip_percentage"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tipPercentTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_2"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/totalCashTipLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_cash_tips"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/totalCashTipTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_2"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/totalCreditTipLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_credit_tips"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/totalCreditTipTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_2"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/totalTipsafterLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_tips_after_tip_out"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/totalTipsTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/_2"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/totalTipsPerHrLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_tips_per_hour"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/totalTipsPerHrTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/_2"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/noteTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/note_optional"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>